--- a/pc_index.html
+++ b/pc_index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="progress-bar-animated progress-bar-striped paddingcont"></div>
-    <img class="img" src="./mobile_web.png" />
+    <img class="img" src="./src/pc_index/mobile_web.png" />
     <div class="container" style="margin-bottom: 0 !important; padding-top: 3rem">
       <div class="innerh1">
         <h1 class="Contenth1 text-center">Чем я занимаюсь?</h1>
@@ -103,17 +103,17 @@
         <p>Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</p>
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./deeplearning.png" class="dsc-img rounded" alt="..." />
+        <img loading="lazy" src="./src/pc_index/deeplearning.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Нейронные сети</h1>
         <p>Нейро́нная сеть — математическая модель, а также её программное или аппаратное воплощение, построенная по принципу организации и функционирования биологических нейронных сетей — сетей нервных клеток живого организма.</p>
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./gamepad.png" class="dsc-img rounded" alt="..." />
+        <img loading="lazy" src="./src/pc_index/gamepad.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Игры</h1>
         <p>Кому-то не нравятся компьютерные игры? Серьёзно?</p>
       </div>
       <div class="dsc">
-        <img loading="lazy" src="./pc_cat.png" class="dsc-img rounded" alt="..." />
+        <img loading="lazy" src="./src/pc_index/pc_cat.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Котики</h1>
         <p>Лол, здесь нужно что-то объяснять? Котики классные.</p>
       </div>
